LibQhy.cs


    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void EnableSupportOICamera([MarshalAs(UnmanagedType.LPStr)] string password);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void QHYCCDResetEMMC(IntPtr handle, bool reset);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDReadEMMCState(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDReadEMMCAddress(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDReadEMMCFPGAData(IntPtr handle, uint* data);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDOpenEMMCMode(IntPtr handle, bool open);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDReadEMMC(IntPtr handle, uint address, uint length, byte* buffer);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDWriteEMMC(IntPtr handle, uint address, uint length, byte* buffer);

    // missing EXPORTFUNC
    // [DllImport("qhyccd", CallingConvention = CallConv)]
    // void call_pnp_event();

    // [DllImport("qhyccd", CallingConvention = CallConv)]
    // void call_data_event_live([MarshalAs(UnmanagedType.LPStr)] string id, byte* imgdata);

    // [DllImport("qhyccd", CallingConvention = CallConv)]
    // void call_transfer_event_error();

    // [DllImport("qhyccd", CallingConvention = CallConv)]
    // void call_critical_event_error(QhyccdHandle h);

    // [DllImport("qhyccd", CallingConvention = CallConv)]
    // public static extern void RegisterPnpEventIn(void (*in_pnp_event_in_func)([MarshalAs(UnmanagedType.LPStr)] stringid));

    // [DllImport("qhyccd", CallingConvention = CallConv)]
    // public static extern void RegisterPnpEventOut(void (*in_pnp_event_out_func)([MarshalAs(UnmanagedType.LPStr)] stringid));

    // [DllImport("qhyccd", CallingConvention = CallConv)]
    // public static extern void RegisterTransferEventError(void (*transfer_event_error_func)());

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void SetPCIECardInfo(IntPtr handle, byte index, byte value);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint PCIEWriteCameraRegister1(IntPtr handle, byte idx, byte val);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint PCIEWriteCameraRegister2(IntPtr handle, byte idx, byte val);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCD_DbGainToGainValue(IntPtr h, double dbgain, out double gainvalue);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCD_GainValueToDbGain(IntPtr h, double gainvalue, out double dbgain);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCD_curveSystemGain(IntPtr handle, double gainV, out double systemgain);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCD_curveFullWell(IntPtr handle, double gainV, out double fullwell);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCD_curveReadoutNoise(IntPtr handle, double gainV, out double readoutnoise);
}

internal enum ControlId : int
{
/*0*/
    ControlBrightness = 0, //!< image brightness
/*1*/
    ControlContrast, //!< image contrast
/*2*/
    ControlWbr, //!< the red of white balance
/*3*/
    ControlWbb, //!< the blue of white balance
/*4*/
    ControlWbg, //!< the green of white balance
/*5*/
    ControlGamma, //!< screen gamma
/*6*/
    ControlGain, //!< camera gain
/*7*/
    ControlOffset, //!< camera offset
/*8*/
    ControlExposure, //!< expose time (us)
/*9*/
    ControlSpeed, //!< transfer speed
/*10*/
    ControlTransferbit, //!< image depth bits
/*11*/
    ControlChannels, //!< image channels
/*12*/
    ControlUsbtraffic, //!< hblank
/*13*/
    ControlRownoisere, //!< row denoise
/*14*/
    ControlCurtemp, //!< current cmos or ccd temprature
/*15*/
    ControlCurpwm, //!< current cool pwm
/*16*/
    ControlManulpwm, //!< set the cool pwm
/*17*/
    ControlCfwport, //!< control camera color filter wheel port
/*18*/
    ControlCooler, //!< check if camera has cooler
/*19*/
    ControlSt4Port, //!< check if camera has st4port
/*20*/
    CamColor, // FIXME!  CAM_IS_COLOR CAM_COLOR conflict
/*21*/
    CamBin1X1Mode, //!< check if camera has bin1x1 mode
/*22*/
    CamBin2X2Mode, //!< check if camera has bin2x2 mode
/*23*/
    CamBin3X3Mode, //!< check if camera has bin3x3 mode
/*24*/
    CamBin4X4Mode, //!< check if camera has bin4x4 mode
/*25*/
    CamMechanicalshutter, //!< mechanical shutter
/*26*/
    CamTrigerInterface, //!< check if camera has triger interface
/*27*/
    CamTecoverprotectInterface, //!< tec overprotect
/*28*/
    CamSingnalclampInterface, //!< singnal clamp
/*29*/
    CamFinetoneInterface, //!< fine tone
/*30*/
    CamShuttermotorheatingInterface, //!< shutter motor heating
/*31*/
    CamCalibratefpnInterface, //!< calibrated frame
/*32*/
    CamChiptemperaturesensorInterface, //!< chip temperaure sensor
/*33*/
    CamUsbreadoutslowestInterface, //!< usb readout slowest

/*34*/
    Cam8Bits, //!< 8bit depth
/*35*/
    Cam16Bits, //!< 16bit depth
/*36*/
    CamGps, //!< check if camera has gps

/*37*/
    CamIgnoreoverscanInterface, //!< ignore overscan area

/*38*/ //QHYCCD_3A_AUTOBALANCE,					 //!< auto white balance//lyl move to 1024
/*39*/
    Qhyccd3AAutoexposure = 39, //!< auto exposure
/*40*/
    Qhyccd3AAutofocus,
/*41*/
    ControlAmpv, //!< ccd or cmos ampv
/*42*/
    ControlVcam, //!< Virtual Camera on off
/*43*/
    CamViewMode,

/*44*/
    ControlCfwslotsnum, //!< check CFW slots number
/*45*/
    IsExposingDone,
/*46*/
    ScreenStretchB,
/*47*/
    ScreenStretchW,
/*48*/
    ControlDdr,
/*49*/
    CamLightPerformanceMode,

/*50*/
    CamQhy5IiGuideMode,
/*51*/
    DdrBufferCapacity,
/*52*/
    DdrBufferReadThreshold,
/*53*/
    DefaultGain,
/*54*/
    DefaultOffset,
/*55*/
    OutputDataActualBits,
/*56*/
    OutputDataAlignment,

/*57*/
    CamSingleframemode,
/*58*/
    CamLivevideomode,
/*59*/
    CamIsColor,
/*60*/
    HasHardwareFrameCounter,
/*61*/
    ControlMaxIdError, //** No Use , last max index */
/*62*/
    CamHumidity, //!<check if camera has	 humidity sensor  20191021 LYL Unified humidity function
/*63*/
    CamPressure, //check if camera has pressure sensor
/*64*/
    ControlVacuumPump, // if camera has VACUUM PUMP
/*65*/
    ControlSensorChamberCyclePump, // air cycle pump for sensor drying
/*66*/
    Cam32Bits,
/*67*/
    CamSensorUlvoStatus, // Sensor working status [0:init  1:good  2:checkErr  3:monitorErr 8:good 9:powerChipErr]  410 461 411 600 268 [Eris board]
/*68*/
    CamSensorPhaseReTrain, // 2020,4040/PRO，6060,42PRO
/*69*/
    CamInitConfigFromFlash, // 2410 461 411 600 268 for now
/*70*/
    CamTrigerMode, //check if camera has multiple triger mode
/*71*/
    CamTrigerOut, //check if camera support triger out function
/*72*/
    CamBurstMode, //check if camera support burst mode
/*73*/
    CamSpeakerLedAlarm, // for OEM-600
/*74*/
    CamWatchDogFpga, // for _QHY5III178C Celestron, SDK have to feed this dog or it go reset
/*75*/
    CamBin6X6Mode, //!< check if camera has bin6x6 mode
/*76*/
    CamBin8X8Mode, //!< check if camera has bin8x8 mode
/*77*/
    CamGlobalSensorGpsled, // Show GPS LED tab on sharpCap
/*78*/
    ControlImgProc, // Process image
/*79*/
    ControlRemoveRbi, // RBI, Remove single residual image
/*80*/
    ControlGlobalReset, //!<image stabilization
/*81*/
    ControlFrameDetect,
/*82*/
    CamGainDbConversion, //!<Supports the conversion between db and gain
/*83*/
    CamCurveSystemGain, //!
/*84*/
    CamCurveFullWell,
/*85*/
    CamCurveReadoutNoise,
/*86*/
    CamUseAverageBinning,
/*87*/
    ControlOutsidePumpV2, // air pump outside

/*88*/
    ControlAutoexposure, //!<auto exposure
/*89*/
    ControlAutoexpTargetBrightness, //!<auto exposure Target Brightness
/*90*/
    ControlAutoexpSampleArea, //!<auto exposure Sample Area
/*91*/
    ControlAutoexPexpMaxMs, //!<auto exposure max exp(ms)
/*92*/
    ControlAutoexPgainMax, //!<auto exposure max gain

/* Do not Put Item after  CONTROL_MAX_ID !! This should be the max index of the list */
/*Last One */
    ControlMaxId,

//TEST id name list
/*1024*/
    ControlAutowhitebalance = 1024, //!<auto white balance  eg.CONTROL_TEST=1024
    ///*1025*/ CONTROL_AUTOEXPOSURE,			//!<auto exposure
    ///*1026*/ CONTROL_AUTOEXPTargetBrightness,//CONTROL_AUTOEXPmessureValue,
    ///*1027*/ CONTROL_AUTOEXPSampleArea,//CONTROL_AUTOEXPmessureMethod,
    ///*1028*/ CONTROL_AUTOEXPexpMaxMS,       //!<auto exposure max exp(ms)
    ///*1029*/ CONTROL_AUTOEXPgainMax,        //!<auto exposure max gain
/*1030*/ ControlImageStabilization, //!<image stabilization      
/*1031*/
    ControlGaiNdB, //!<uesed to test dBGain control  //CONTROL_dB_TO_GAIN
/*1032*/
    ControlDpc, //!<Turn on or off the image DPC function(Remove thermal noise)
/*1033*/
    ControlDpcValue, //!<value the image DPC function(Remove thermal noise)
/*1034*/
    ControlHdr, //!<HDR For cameras with high gain and low gain channels combined into 16 bits, set combination parameters>
    //!<HDR status  0:As-is output  1:Splice according to k and b values  2:Calculate k and b, only once
/*1035*/ //CONTROL_HDR_H_k,               //!<HDR H k
/*1036*/ //CONTROL_HDR_H_b,               //!<HDR H b
/*1035*/
    ControlHdrLK, //!<HDR L k
/*1036*/
    ControlHdrLB, //!<HDR L b
/*1037*/
    ControlHdrX, //,                //!<HDR X
/*1038*/
    ControlHdrShowKb //!show HDR kb
//CONTROL_SHOWIMG
};
